--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-<!--
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
--->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Mesto Russia">
+  <meta name="keywords" content="HTML5, CSS, JavaScript">
+  <meta name="author" content="Кострова Арина">
+  <link rel="icon" type="image/svg" href="<%=require('../src/images/logo-header.svg')%>">
+  <title>Mesto</title>
+</head>
+<body>
+<div id="root"></div>
+</body>
 </html>
