fix: fix header background color and paddings for tablet

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Mesto Russia">
-  <meta name="keywords" content="HTML5, CSS, JavaScript">
+  <meta name="description" content="Movies">
+  <meta name="keywords" content="HTML5, CSS3, JavaScript, React">
   <meta name="author" content="Кострова Арина">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <title>Mesto</title>
+  <title>Movies</title>
 </head>
 <body>
 <div id="root"></div>
